--- a/erp-quimicos/src/main/webapp/css/modalbox/crmcontactos/formaCrmContactos.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/crmcontactos/formaCrmContactos.css
@@ -94,12 +94,11 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     font-size: 1em; 
 }
 
-
 .crmcontactos_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-    width:790px;
-    height:405px;
+    width:810px;
+    height:480px;
     border-radius:10px;
     background-color:#e9e9e9;
     border:3px solid #454442;
@@ -107,10 +106,9 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     box-shadow: 3px 5px 10px -3px;
 }
 
-
 .crmcontactos_div_two{
     /*font-family:tahoma;*/
-    width:790px;
+    width:810px;
     height:28px;
     background-color:#454442;
     margin-top:0;
@@ -125,7 +123,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .crmcontactos_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:780px;
+    /*width:780px;*/
     /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
