--- a/erp-quimicos/src/main/webapp/vm/crmcontactos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmcontactos/startup.vm
@@ -112,35 +112,46 @@
                                     <div id="tabx-1" class="contenidoPes" >
                                         <table border="0">
                                             <tr>
-                                                <td width="5"></td>
+                                                <td width="100">Folio</td>
+                                                <td width="145"><INPUT TYPE="text" name="folio" style="width:145px;"></td>
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                <td width="150"></td>
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                <td width="150"></td>
+                                                <td width="25"></td>
+                                            </tr>
+                                            
+                                            <tr>
+                                               <td colspan="9">&nbsp;</td>
+                                            </tr>
+                                            
+                                            <tr>
                                                 <td width="100">Tipo</td>
-                                                <td width="150">
+                                                <td width="145">
                                                     <select name="tipo_contacto" style="width:145px;" >
                                                         <option value="1">Cliente</option>
                                                         <option value="2">Prospecto</option>
                                                     </select>
                                                 </td>
                                                 <td width="25"></td>
-                                                <td width="100">Folio</td>
-                                                <td width="150"><INPUT TYPE="text" name="folio" style="width:145px;"></td>
-                                                <td width="25"></td>
                                                 <td width="100">Agente</td>
-                                                <td width="150">
-                                                    <select name="select_agente" style="width:145px;" />
-                                                </td>
+                                                <td width="145"><select name="select_agente" style="width:145px;" /></td>
                                                 <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
-                                                <td width="5"></td>
+                                                <td width="100">Decisor</td>
+                                                <td width="145"><input type="checkbox" name="check_decisor"></td>
+                                                <td width="25"></td>
                                             </tr>
                                             <tr>
-                                               <td colspan="11">&nbsp;</td>
+                                               <td colspan="9">&nbsp;</td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
                                                 <td colspan="9">
                                                     <table>
                                                         <tr>
                                                             <td>
-                                                                <td width="90">RFC&nbsp;Empresa</td>
+                                                                <td width="100">RFC&nbsp;Empresa</td>
                                                                 <td width="110">
                                                                     <INPUT TYPE="text" name="rfc" style="width:100px;">
                                                                     <INPUT TYPE="hidden" name="id_cliente" value="0" >
@@ -153,44 +164,38 @@
                                                         </tr>
                                                     </table>
                                                 </td>
-                                                <td width="5"></td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
                                                 <td width="100">Nombre</td>
-                                                <td width="150"><INPUT TYPE="text" name="nombre" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="nombre" style="width:145px;"></td>
                                                 <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nombre"></div></td>
                                                 <td width="100">Apellido&nbsp;Paterno</td>
-                                                <td width="150"><INPUT TYPE="text" name="apellido_paterno" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="apellido_paterno" style="width:145px;"></td>
                                                 <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_apellido_materno"></div></td>
                                                 <td width="100">Apellido&nbsp;Materno</td>
-                                                <td width="150"><INPUT TYPE="text" name="apellido_materno" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="apellido_materno" style="width:145px;"></td>
                                                 <td width="25"></td>
-                                                <td width="5"></td>
                                             </tr>
                                             <tr>
-                                               <td colspan="11">&nbsp;</td>
+                                               <td colspan="9">&nbsp;</td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
                                                 <td width="100">Telefono&nbsp;1</td>
-                                                <td width="150"><INPUT TYPE="text" name="telefono_1" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="telefono_1" style="width:145px;"></td>
                                                 <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_telefono_1"></div></td>
                                                 <td width="100">Telefono&nbsp;2</td>
-                                                <td width="150"><INPUT TYPE="text" name="telefono_2" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="telefono_2" style="width:145px;"></td>
                                                 <td width="25"></td>
                                                 <td width="100">Fax</td>
-                                                <td width="150"><INPUT TYPE="text" name="fax" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="fax" style="width:145px;"></td>
                                                 <td width="25"></td>
-                                                <td width="5"></td>
                                             </tr>
                                             <tr>
-                                               <td colspan="11">&nbsp;</td>
+                                               <td colspan="9">&nbsp;</td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
                                                 <td width="100">Telefono&nbsp;Directo</td>
-                                                <td width="150"><INPUT TYPE="text" name="telefono_directo" style="width:145px;"></td>
+                                                <td width="145"><INPUT TYPE="text" name="telefono_directo" style="width:145px;"></td>
                                                 <td width="25"></td>
                                                 <td width="100">Correo 1</td>
                                                 <td width="150"><INPUT TYPE="text" name="correo_1" style="width:145px;"></td>
@@ -198,33 +203,63 @@
                                                 <td width="100">Correo 2</td>
                                                 <td width="150"><INPUT TYPE="text" name="correo_2" style="width:145px;"></td>
                                                 <td width="25"></td>
-                                                <td width="5"></td>
+                                            </tr>
+                                            
+                                            <tr>
+                                               <td colspan="9">&nbsp;</td>
                                             </tr>
                                             <tr>
-                                               <td colspan="11">&nbsp;</td>
+                                                <td width="100" colspan="4">Departamento</td>
+                                                <!--
+                                                <td width="145"></td>
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                -->
+                                                <td width="145" colspan="4">Puesto</td>
+                                                <!--
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                <td width="145"></td>
+                                                -->
+                                                <td width="25"></td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
+                                                <td width="100" colspan="4"><INPUT TYPE="text" name="departamento" style="width:320px;"></td>
+                                                <!--
+                                                <td width="145"></td>
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                -->
+                                                <td width="145" colspan="4"><INPUT TYPE="text" name="puesto" style="width:400px;"></td>
+                                                <!--
+                                                <td width="25"></td>
+                                                <td width="100"></td>
+                                                <td width="145"></td>
+                                                -->
+                                                <td width="25"></td>
+                                            </tr>
+                                            
+                                            
+
+                                            <tr>
+                                               <td colspan="9">&nbsp;</td>
+                                            </tr>
+                                            <tr>
                                                 <td width="100">Observaciones</td>
-                                                <td width="150"></td>
+                                                <td width="145"></td>
                                                 <td width="25"></td>
                                                 <td width="100"></td>
-                                                <td width="150"></td>
+                                                <td width="145"></td>
                                                 <td width="25"></td>
                                                 <td width="100"></td>
-                                                <td width="150"></td>
+                                                <td width="145"></td>
                                                 <td width="25"></td>
-                                                <td width="5"></td>
                                             </tr>
                                             <tr>
-                                                <td width="5"></td>
                                                 <td colspan="8">
-                                                    <textarea name="observaciones" rows="4" cols="60" style="width:660px; resize:none;"></textarea>
+                                                    <textarea name="observaciones" rows="4" cols="60" style="width:760px; resize:none;"></textarea>
                                                 </td>
-                                                <td width="5"></td>
-                                            </tr>
-                                            <tr>
-                                               <td colspan="11">&nbsp;</td>
+                                                <td width="25"></td>
                                             </tr>
                                         </table>
                                     </div>
