--- a/erp-quimicos/src/main/webapp/vm/crmregistroproyectos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistroproyectos/startup.vm
@@ -203,10 +203,10 @@
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80">Fecha&nbsp;inicio</td>
-                                                                <td width="100"><input type="text" name="fecha_inicio" style="width:100px;" readOnly="true"></td>
+                                                                <td width="100"><input type="text" name="fecha_inicio" style="width:100px;" readonly></td>
                                                                 <td width="50"></td>
                                                                 <td width="70">Fecha&nbsp;fin</td>
-                                                                <td width="100"><input type="text" name="fecha_fin" style="width:100px;" readOnly="true"></td>
+                                                                <td width="100"><input type="text" name="fecha_fin" style="width:100px;" readonly></td>
                                                                 <td width="110"></td>
                                                                 <td width="60"></td>
                                                                 <td width="25"></td>
@@ -233,9 +233,9 @@
                                                                 <td width="80">Muestra</td>
                                                                 <td width="100"><select name="select_muestra" style="width:100px;"></select></td>
                                                                 <td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_muestra"></div></td>
-                                                                <td width="70"></td>
-                                                                <td width="100"></td>
-                                                                <td width="110"></td>
+                                                                <td width="70">Monto</td>
+                                                                <td width="100"><input type="text" name="monto" maxlength="10" style="width:100px;"></td>
+                                                                <td width="110"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_monto"></div></td>
                                                                 <td width="60"></td>
                                                                 <td width="25"></td>
                                                             </tr>
