--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -85,14 +85,11 @@
 													<li class="topline"><a href="../prefacturas/startup.agnux">Facturaci&oacute;n</a></li>
 													<li class="topline"><a href="../facconsultas/startup.agnux">Consulta</a></li>
 													<li class="topline"><a href="../faccancelacion/startup.agnux">Cancelaci&oacute;n</a></li>
-													
-													<!--<li class="topline"><a href="../facturas/startup.agnux">Consulta Cancelaci&oacute;n</a></li>-->
-													
 													<li class="topline"><a href="../facdevoluciones/startup.agnux">Devoluci&oacute;n</a></li>
 													<li class="topline"><a href="../remisiones/startup.agnux">Remisiones</a></li>
-													
 													<li class="topline"><a href="../facnomina/startup.agnux">N&oacute;mina</a></li>
 													<!--
+													<li class="topline"><a href="../facnomina/startup.agnux">N&oacute;mina</a></li>
 													<li class="topline"><a href="#">Factura Venta</a></li>
 													<li class="topline"><a href="#">Nota Cr&eacute;dito/Cargo</a></li>
 													-->
@@ -136,12 +133,14 @@
 													<li class="topline"><a href="../clientsclasif2/startup.agnux">Clasificaci&oacute;n 2</a></li>
 													<li class="topline"><a href="../clientsclasif3/startup.agnux">Clasificaci&oacute;n 3</a></li>
 													<li class="topline"><a href="../clientstmovimientos/startup.agnux">Tipos de Movimientos</a></li>
+													
+
+													
 													<!--
 													<li class="topline" id="transpor"><a href="../clientsremiten/startup.agnux">Remitentes</a></li>
 													<li class="topline" id="transpor"><a href="../clientsdest/startup.agnux">Destinatarios</a></li>
 													<li class="topline" id="transpor"><a href="../clientsagenaduanal/startup.agnux">Agentes Aduanales</a></li>
-													-->
-													<!--
+													
 													<li class="topline"><a href="#">Mensajes</a></li>
 													<li class="topline"><a href="#">Direcciones</a></li>
 													<li class="topline"><a href="#">C&oacute;digo de Producto</a></li>
@@ -156,9 +155,11 @@
 												<ul>
 													<li class="topline"><a href="../carteras/startup.agnux">Cobranza</a></li>
 													<li class="topline"><a href="../notascredito/startup.agnux">Nota de Cr&eacute;dito</a></li>
-													<li class="topline"><a href="../programacionrutas/startup.agnux">Programaci&oacute;n de Ruta</a></li>
 													<li class="topline"><a href="../clientsantcancel/startup.agnux">Anticipos</a></li>
+													
 													<!--
+													<li class="topline"><a href="../programacionrutas/startup.agnux">Programaci&oacute;n de Ruta</a></li>
+													
 													<li class="topline"><a href="#">Movimientos</a></li>
 													<li class="topline"><a href="#">Actualizar Precio/Descuento</a></li>
 													<li class="topline"><a href="#">Anticipos</a></li>
@@ -166,6 +167,7 @@
 													-->
 												</ul>
 											</li>
+											
 											<!--
 											<li>
 												<a href="#" class="sub">Asignaci&oacute;n &raquo;</a>
@@ -176,6 +178,7 @@
 												</ul>
 											</li>
 											-->
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
@@ -190,16 +193,14 @@
 													<li class="topline"><a href="../repestadisticasanualesventas/startup.agnux">Estad&iacute;stico de Ventas Anuales Cliente</a></li>
 													<li class="topline"><a href="../repestadisticaanualventasproducto/startup.agnux">Estad&iacute;stico de Ventas Anuales Producto</a></li>
 													
+													<!--
 													<li class="topline"><a href="../repcomparativoasventasanuales/startup.agnux">Comparativo de Ventas Anuales Cliente</a></li>
 													<li class="topline"><a href="../repcomparativoasventasanualesproducto/startup.agnux">Comparativo de Ventas Anuales Producto</a></li>
-													
-													<!--
-													<li class="topline"><a href="../repventasanualescliente/startup.agnux">Ventas Netas Anuales por Cliente</a></li>
 													-->
+													
+													<li class="topline"><a href="../repventasanualescliente/startup.agnux">Ventas Netas Anuales por Cliente</a></li>
 													<li class="topline"><a href="../repclientes/startup.agnux">Clientes</a></li>
 													<li class="topline"><a href="../cxcrepsaldomes/startup.agnux">Saldo Mensual</a></li>
-													<li class="topline"><a href="../cxcrepiepscobrado/startup.agnux">IEPS Cobrado por Factura</a></li>
-													<li class="topline"><a href="../cxcrepiepsxcliente/startup.agnux">IEPS Cobrado por Cliente</a></li>
 													
 													<!--esto se agrego, estaba en menu cunetas por cobrar-->
 													<!--
@@ -214,6 +215,8 @@
 											</li>
 										</ul>
 									</li>
+
+
 
 
 
@@ -267,7 +270,6 @@
 													<li class="topline"><a href="../cxprepantiguedadsaldos/startup.agnux">Antig&uuml;edad de Saldos</a></li>
 													<li class="topline"><a href="../cxprepsaldomes/startup.agnux">Saldo Mensual</a></li>
 													<li class="topline"><a href="../repprov/startup.agnux">Proveedores</a></li>
-													<li class="topline"><a href="../cxprepiepspagado/startup.agnux">IEPS Pagado</a></li>
 													
 													<!--
 													<li class="topline"><a href="#">Saldo Mensual</a></li>
@@ -286,11 +288,11 @@
 												<ul>
 
 													<li class="topline"><a href="../com_requisicion/startup.agnux">Requisici&oacute;n</a></li>
-													
-													<!--<li class="topline"><a href="../com_oc_req/startup.agnux">Autorizaci&oacute;n de Requisici&oacute;n</a></li>-->
+													<li class="topline"><a href="../com_oc_req/startup.agnux">Autorizaci&oacute;n de Requisici&oacute;n</a></li>
 													
 													<li class="topline"><a href="../comordencompra/startup.agnux">Orden de Compra</a></li>
 													<li class="topline"><a href="../comcompraautorizacion/startup.agnux">Autorizaci&oacute;n de O. C.</a></li>
+													
 													<li class="topline"><a href="../entradamercancias/startup.agnux">Facturas de Compras</a></li>
 													<li class="topline"><a href="../comfacdevolucion/startup.agnux">Devoluci&oacute;n</a></li>
 													<li class="topline"><a href="../invcapturacostos/startup.agnux">Costo de Reposici&oacute;n</a></li>
@@ -312,6 +314,9 @@
 											</li>
 										</ul>
 									</li>
+
+
+
 
 
 
@@ -340,7 +345,7 @@
 													<li class="topline"><a href="../invpre/startup.agnux">Precios</a></li>
 													<li class="topline"><a href="../invunidades/startup.agnux">Unidades</a></li>
 													<li class="topline"><a href="../invpresentaciones/startup.agnux">Presentaciones</a></li>
-
+													
 													<!--
 													<li class="topline"><a href="../invformulas/startup.agnux">F&oacute;rmulas</a></li>//esto se fue al menu produccion
 													<li class="topline"><a href="#">Impuestos</a></li>
@@ -348,20 +353,18 @@
 													-->
 												</ul>
 											</li>
+											
+											
 											<li>
 												<a href="#" class="sub">Asignaci&oacute;n de &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../invplazassucursales/startup.agnux">Plazas a Sucursales</a></li>
 												</ul>
 											</li>
+											
+											
+											
 											<!--
-											<li>
-												<a href="#" class="sub">Traspasos &raquo;</a>
-												<ul>
-													<li class="topline"><a href="../traspasomercancias/startup.agnux">Traspaso</a></li>
-												</ul>
-											</li>
-
 											<li>
 												<a href="#" class="sub">Captura Movimientos &raquo;</a>
 												<ul>
@@ -382,16 +385,14 @@
 													<li class="topline"><a href="../invajustes/startup.agnux">Ajustes</a></li>
 													<li class="topline"><a href="../invtraspasos/startup.agnux">Traspasos</a></li>
 													<li class="topline"><a href="../invordentras/startup.agnux">Orden de Traspaso</a></li>
-													
+													<!--
 													<li class="topline"><a href="../invordpresuben/startup.agnux">Orden de Producci&oacute;n</a></li>
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Producci&oacute;n de Subensamble</a></li>
+													-->
 													
 													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
 													<li class="topline"><a href="../invactualizaprecios/startup.agnux">Actualizar Precios</a></li>
 													<li class="topline"><a href="../invcarga/startup.agnux">Carga de Inventario F&iacute;sico</a></li>
-													
-													<li class="topline"><a href="../invordensalidaetiqueta/startup.agnux">Impresi&oacute;n de Etiquetas de Salida</a></li>
-													
 													<!--
 													<li class="topline"><a href="#">Actualizar Precios</a></li>
 													<li class="topline"><a href="#">Existencias F&iacute;sicas</a></li>
@@ -410,7 +411,6 @@
 												</ul>
 											</li>
 											-->
-
 											<li>
 												<a href="#" class="sub">Descargas &raquo;</a>
 												<ul>
@@ -430,14 +430,14 @@
 													<li class="topline"><a href="#">Kardex</a></li>
 													-->
 													<li class="topline"><a href="../invrepexis/startup.agnux">Inventario</a></li>
-													<li class="topline"><a href="../repinvexislote/startup.agnux">Existencias en Lotes</a></li>
+													<li class="topline"><a href="../repinvexislote/startup.agnux">Existencias por Lotes</a></li>
+													<!--
 													<li class="topline"><a href="../repinvexispres/startup.agnux">Existencias en Presentaciones</a></li>
 													<li class="topline"><a href="../invetiquetas/startup.agnux">Impresi&oacute;n de Etiquetas</a></li>
 													<li class="topline"><a href="../repinvkits/startup.agnux">Kits</a></li>
+													-->
 													<li class="topline"><a href="../repinvmovimientos/startup.agnux">Movimientos</a></li>
-													<li class="topline"><a href="../invetiquetasentrada/startup.agnux">Etiquetas de Entrada</a></li>
 													<!--
-
 													<li class="topline"><a href="#">Existencias FÃ­sicas Capturadas</a></li>
 													-->
 												</ul>
@@ -511,20 +511,14 @@
 											</li>
 											
 											<li>
-												<a href="../ctbpar/startup.agnux">Configuraci&oacute;n</a>
-											</li>
-											
-											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../ctbrepauxcta/startup.agnux">Auxiliar de Cuentas</a></li>
-													<!--
 													<li class="topline"><a href="../ctbrepauxmovcta/startup.agnux">Auxiliar de Movimientos de Cuentas</a></li>
-													<li class="topline"><a href="../ctbrepbalancegnl/startup.agnux">Balance General</a></li>
-													-->
 													<li class="topline"><a href="../ctbrepbalanzacomp/startup.agnux">Balanza de Comprobaci&oacute;n</a></li>
-													<!--
+													<li class="topline"><a href="../ctbrepbalancegnl/startup.agnux">Balance General</a></li>
 													<li class="topline"><a href="../ctbrepestadoresult/startup.agnux">Estado de Resultados</a></li>
+													<!--
+													<li class="topline"><a href="../ctbrepauxcta/startup.agnux">Auxiliar de Cuentas</a></li>
 													<li class="topline"><a href="../ctbreppolizacont/startup.agnux">P&oacute;lizas Contables</a></li>
 													<li class="topline"><a href="../ctbrepestadoresultanual/startup.agnux">Estado de Resultados Anual</a></li>
 													<li class="topline"><a href="../ctbreplibromayor/startup.agnux">Libro de Mayor</a></li>
@@ -537,68 +531,61 @@
 										</ul>
 									</li>
 
-									<li class="accessible" >
-										<a href="http://jdsharp.us" class="accessible">CRM &raquo;</a>
+
+
+
+
+
+									<li class="accessible">
+										<a href="http://jdsharp.us" class="accessible">Producci&oacute;n &raquo;</a>
 										<ul>
-											<li><a href="#" class="sub">Catalogos &raquo;</a>
+											
+											<li>
+												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../crmmotivosvisitas/startup.agnux">Motivo&nbsp;de&nbsp;Visita.</a></li>
-													<li class="topline"><a href="../crmformascontacto/startup.agnux">Formas&nbsp;de&nbsp;Contacto.</a></li>
-													<li class="topline"><a href="../crmmotivosllamadas/startup.agnux">Motivos&nbsp;de&nbsp;Llamadas.</a></li>
-													<li class="topline"><a href="../crmprospectos/startup.agnux">Prospectos</a></li>
-													<li class="topline"><a href="../crmcontactos/startup.agnux">Contactos</a></li>
+													<li><a href="../proequipos/startup.agnux">Equipos</a></li>
+													<li><a href="../proequiposadic/startup.agnux">Equipos Adicionales</a></li>
+													<li><a href="../protipoequipo/startup.agnux">Tipos de Equipo</a></li>
+													<li><a href="../proinstrumentosmedicion/startup.agnux">Instrumentos de Medici&oacute;n</a></li>
 												</ul>
 											</li>
+											
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../crmregistrovisitas/startup.agnux">Registro de Visitas</a></li>
-													<li class="topline"><a href="../crmregistrollamadas/startup.agnux">Registro de Llamadas</a></li>
-													<li class="topline"><a href="../crmoportunidades/startup.agnux">Registro de Oportunidades</a></li>
-													<li class="topline"><a href="../crmmetas/startup.agnux">Registro de Metas </a></li>
-													<li class="topline"><a href="../crmregistrocasos/startup.agnux">Registro de Casos</a></li>
-													<li class="topline"><a href="../crmregistroproyectos/startup.agnux">Registro de Proyectos</a></li>
+													<li class="topline"><a href="../proformulasdesarrollo/startup.agnux">Formulas en Desarrollo</a></li>
+													<li class="topline"><a href="../proconfigproduccion/startup.agnux">Configuraci&oacute;n</a></li>
+													<li class="topline"><a href="../propreordenproduccion/startup.agnux">Preorden Producci&oacute;n</a></li>
+													<li class="topline"><a href="../proordenproduccion/startup.agnux">Orden Producci&oacute;n</a></li>
+													<li class="topline"><a href="../procalidad/startup.agnux">Aseguramiento de Calidad</a></li>
+													<li class="topline"><a href="../proordensimulacion/startup.agnux">Simulaci&oacute;n de Producci&oacute;n</a></li>
+													<!--
+													<li class="topline"><a href="#">Cancelaci&oacute;n</a></li>
+													<li class="topline"><a href="#">Nota Cargo/Cr&eacute;dito</a></li>
+													<li class="topline"><a href="#">Consulta Cancelaci&oacute;n/Devoluci&oacute;n</a></li>
+													<li class="topline"><a href="#">Recepci&oacute;n Documentos XML</a></li>
+													-->
 												</ul>
 											</li>
 											<li>
-												<a href="#" class="sub">Consultas &raquo;</a>
+												<a href="#" class="sub">Reportes&raquo;</a>
 												<ul>
-													<li class="topline"><a href="../crmconsultas/startup.agnux">Consultas</a></li>
-													<li class="topline"><a href="../crmbigpicture/startup.agnux">Resumen de Consultas</a></li>
-												</ul>
-											</li>
-											<li>
-												<a href="#" class="sub">Reportes &raquo;</a>
-												<ul>
-													<li class="topline"><a href="../crmreportevisitas/startup.agnux">Visitas</a></li>
+													<!--<li class="topline"><a href="#">F&oacute;rmulas</a></li>-->
+													<li class="topline"><a href="../proreporteproduccion/startup.agnux">Producci&oacute;n</a></li>
+													<li class="topline"><a href="../proreportecalidad/startup.agnux">Reporte de Calidad</a></li>
 												</ul>
 											</li>
 										</ul>
 									</li>
+									
+
+
 
 
 									
-									<li class="accessible" >
-										<a href="http://jdsharp.us" class="accessible">Envasado &raquo;</a>
-										<ul>
-											<li>
-												<a href="#" class="sub">Procesos &raquo;</a>
-												<ul>
-													<li class="topline"><a href="../envconf/startup.agnux">Configuraci&oacute;n</a></li>
-													<li class="topline"><a href="../envreenv/startup.agnux">Re-Envasado</a></li>
-													<li class="topline"><a href="../envproceso/startup.agnux">Envasado</a></li>
-												</ul>
-											</li>
-											<!--
-											<li>
-												<a href="#" class="sub">Reportes</a>
-												<ul>
-													<li class="topline"><a href="#">xxxx</a></li>
-												</ul>
-											</li>
-											-->
-										</ul>
-									</li>
+
+
+
 
 
 
@@ -622,7 +609,6 @@
 													<li><a href="../gralpercepciones/startup.agnux">Percepciones</a></li>
 													<li><a href="../graldeducciones/startup.agnux">Deduciones</a></li>
 													<li><a href="../gralperiodicidadpago/startup.agnux">Periodicidad de Pago</a></li>
-													<li><a href="../gralconfigperiodospago/startup.agnux">Periodos de Pago</a></li>
 												</ul>
 											</li>
 
@@ -640,6 +626,9 @@
 
 
 
+
+
+
 								</ul>
 								<!--
 								<script type="text/javascript">
@@ -649,13 +638,13 @@
 								-->
 							</div>
 						</div>
-						
+
                 </div>
                 </div>
                 </div>
-                
+
                 <div id="barra_acciones">
-					
+
                 </div>
 
                 <!--
@@ -668,19 +657,22 @@
                         </div>
                 </div>
                 -->
-                
+
+
+
                 <div id="barra_titulo" title="barra_titulo">
                         <table><tr><td width="15" height="25"></td><td id="td_titulo"></td></tr></table>
                 </div>
-                
+
                 <!--
                 <div id="barra_descarga_pdf">  </div>
                 <div id="barra_descarga_xml">  </div>
                 -->
-                
+
                 <div id="barra_genera_informe">  </div>
                 <div id="barra_buscador">  </div>
-                
+
+
                 <div id="cuerpo" >
                         <div id="lienzo_recalculable" class="container" style="background:;">
                                 <div id="one1" class="tab_content2">
