Xml de Cuentas Contables
git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1769 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -511,6 +511,13 @@
 											</li>
 											
 											<li>
+												<a href="#" class="sub">Electr&oacute;nica &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../ctbxmlcuentascontables/startup.agnux">Cuentas Contables</a></li>
+												</ul>
+											</li>
+											
+											<li>
 												<a href="../ctbpar/startup.agnux">Configuraci&oacute;n</a>
 											</li>
 											
