git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1771 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -514,6 +514,7 @@
 												<a href="#" class="sub">Electr&oacute;nica &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../ctbxmlcuentascontables/startup.agnux">Cuentas Contables</a></li>
+													<li class="topline"><a href="../ctbxmlbalanzacomprobacion/startup.agnux">Balanza de Comprobaci&oacute;n</a></li>
 												</ul>
 											</li>
 											
