--- a/erp-quimicos/src/main/webapp/css/modalbox/proveedors/formaProveedor.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/proveedors/formaProveedor.css
@@ -104,7 +104,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
     width:880px;
-    height:465px;
+    /*height:465px;*/
     border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -125,38 +125,18 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     border-radius:5px 5px 0px 0px;
     font-size: 14px; 
     z-index:1;
-    
-/*
-	font-family:tahoma;
-    width:598px;
-    height:28px;
-    background-color:;
-	margin-top:0;
-    color:white;
-	padding-top:10px;
-	padding-left:10px;
-*/	
 }
 
 .proveedors_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:870px;
     /*height:145px;*/
     background-color:#e9e9e9;
     margin-top:5px;
     margin-right:10px;
     margin-left:10px;
     margin-bottom:10px;
-/*font-family:tahoma;
-font-size:11px;
-    width:582px;
-    height:145px;
-    background-color:#D1D2D4;
-    margin-top:5px;
-	margin-right:10px;
-	margin-left:10px;
-	margin-bottom:10px;*/
+    margin-bottom:50px;
 }
 
 
