Modificación del reporte de ventas netas por producto. Creacion de Reporte Comercial, es pareceido al de ventas netas por producto sin la columna costo.
git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1774 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -200,6 +200,7 @@
 													<li class="topline"><a href="../cxcrepsaldomes/startup.agnux">Saldo Mensual</a></li>
 													<li class="topline"><a href="../cxcrepiepscobrado/startup.agnux">IEPS Cobrado por Factura</a></li>
 													<li class="topline"><a href="../cxcrepiepsxcliente/startup.agnux">IEPS Cobrado por Cliente</a></li>
+													<li class="topline"><a href="../cxcrepcomercial/startup.agnux">Reporte Comercial</a></li>
 													
 													<!--esto se agrego, estaba en menu cunetas por cobrar-->
 													<!--
