Cambios en el CRM: -En el listado de  visitas agregar un buscador que sea de cliente o prospecto. -Activar el “ENTER” en el comando de buscar cuando buscas el contacto en el registro de proyecto. -Cuando se actualice un registro de proyecto ya existente en listado de proyectos QUE NO SE REGRESE A LA PAGINA 1 del listado de proyectos. -Error en el campo TIPO (solo da prospecto) al momento de editar el catalogo de contactos en CRM. -No se puede eliminar un registro de contacto, en Catalogo de contactos CRM. -Agregar un cuadro de próxima llamada en el registro de visitas. -En el data grid de registro de visitas quitar columna hora y agregar columnas: de próxima visita, próxima llamada. -Hacer catalogo de "seguimiento de visitas" (para poder agregar más opciones de Seguimiento en registro de visitas) en CRM.
git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1778 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -543,9 +543,10 @@
 										<ul>
 											<li><a href="#" class="sub">Catalogos &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../crmmotivosvisitas/startup.agnux">Motivo&nbsp;de&nbsp;Visita.</a></li>
-													<li class="topline"><a href="../crmformascontacto/startup.agnux">Formas&nbsp;de&nbsp;Contacto.</a></li>
-													<li class="topline"><a href="../crmmotivosllamadas/startup.agnux">Motivos&nbsp;de&nbsp;Llamadas.</a></li>
+													<li class="topline"><a href="../crmmotivosvisitas/startup.agnux">Motivo&nbsp;de&nbsp;Visita</a></li>
+													<li class="topline"><a href="../crmvisitaseguimiento/startup.agnux">Tipos&nbsp;de&nbsp;Seguimiento&nbsp;de&nbsp;Visitas</a></li>
+													<li class="topline"><a href="../crmformascontacto/startup.agnux">Formas&nbsp;de&nbsp;Contacto</a></li>
+													<li class="topline"><a href="../crmmotivosllamadas/startup.agnux">Motivos&nbsp;de&nbsp;Llamadas</a></li>
 													<li class="topline"><a href="../crmprospectos/startup.agnux">Prospectos</a></li>
 													<li class="topline"><a href="../crmcontactos/startup.agnux">Contactos</a></li>
 												</ul>
