--- a/erp-quimicos/src/main/webapp/css/modalbox/crmvisitaseguimiento/formaCrmVisitaSeguimiento.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/crmvisitaseguimiento/formaCrmVisitaSeguimiento.css
@@ -1,4 +1,4 @@
-#forma-crmregistrovisitas-overlay {
+#forma-crmvisitaseguimiento-overlay {
 	position: fixed;
 	z-index:100;
 	top: 0px;
@@ -8,29 +8,30 @@
 /*background: #000;*/
 	display: none;
 }
-#forma-crmregistrovisitas-window {
+#forma-crmvisitaseguimiento-window {
 	position: fixed;
+        
 	z-index: 101;
 	/*display:block;*/
 	top:50%;
-	left:50%;
+	left:60%;
 	height:0px;
-	width:0px;
+	width:0x;
 	background: white;
 }
 
-#forma-crmregistrovisitas-window li {
+#forma-crmvisitaseguimiento-window li {
 	list-style-type: none !important;
 }
 
-#forma-crmregistrovisitas-window div.tabulador{
+#forma-crmvisitaseguimiento-window div.tabulador{
 	font-family: Arial, Verdana, sans-serif;
 	font-size: 11px;
 	padding: 4px 4px 4px 10px;
 	
 }
 
-#forma-crmregistrovisitas-window li {
+#forma-crmvisitaseguimiento-window li {
 	list-style-type: none !important;
 }
 
@@ -94,21 +95,21 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 }
 
 
-
-.crmregistrovisitas_div_one{
+.crmvisitaseguimiento_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:810px;
+	width:370px;
 	border-radius:10px;
 	background-color:#e9e9e9;
-    border:3px solid #454442;
+	border:3px solid #454442;
 	z-index:2;
 	box-shadow: 3px 5px 10px -3px;
 }
 
 
-.crmregistrovisitas_div_two{
-	width:810px;
+.crmvisitaseguimiento_div_two{
+	/*font-family:tahoma;*/
+    width:380px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -120,9 +121,11 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	z-index:1;	
 }
 
-.crmregistrovisitas_div_three{
+.crmvisitaseguimiento_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
+    width:370px;
+    /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
 	margin-right:10px;
@@ -147,4 +150,3 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	border-color:transparent; 
 	background:transparent;
 }
-
