--- a/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
@@ -40,27 +40,29 @@
 				<td colspan="19">&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10"></td>
 				<td width="80">Folio</td>
-				<td width="20"></td>
+				<td width="10"></td>
 				<td width="100">Tipo&nbsp;de&nbsp;Visita</td>
-				<td width="20"></td>
-				<td width="245">Nombre&nbsp;del&nbsp;contacto</td>
-				<td width="20">&nbsp;</td>
+				<td width="10"></td>
+				<td width="200">Cliente/Prospecto</td>
+				<td width="10"></td>
+				<td width="200">Nombre&nbsp;del&nbsp;contacto</td>
+				<td width="10"></td>
 				<td width="200">Agente</td>
 				<td width="20"></td>
 				<td width="25"></td>
 				<td colspan="3">Fecha&nbsp;de&nbsp;Visita</td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td></td>
 				<td width="25"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;</td>
+				<td width="25"></td>
+				<td width="10"></td>
 				<td ></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;</td>
+				<td width="10"></td>
 			</tr>
 			
 			<tr>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10"></td>
 				<td width="80"><input type="text" name="busqueda_folio" style="width:80px;"></td>
 				<td width="20"></td>
 				<td>
@@ -70,9 +72,11 @@
 						<option value="2">Prospecto</option>
 					</select>
 				</td>
-				<td width="20"></td>
-				<td width="245"><input type="text" name="busqueda_contacto" style="width:245px;"></td>
-				<td width="20">&nbsp;</td>
+				<td width="10"></td>
+				<td width="200"><input type="text" name="busqueda_cliente" value="" style="width:200px;"></td>
+				<td width="10"></td>
+				<td width="200"><input type="text" name="busqueda_contacto" value="" style="width:200px;"></td>
+				<td width="10"></td>
 				<td width="200">
 					<select name="busqueda_agente" style="width:200px;">
 						<option value="0" >[-- Selecionar Agente --]</option>
@@ -85,11 +89,11 @@
 				<td width="15"></td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 				<td width="90"><input type="text" name="busqueda_fecha_final" style="width:90px;" readOnly="true"></td>
-				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="25"></td>
 				<td><input type="button" id="boton_buscador" class="onmouseOutBuscar"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10"></td>
 				<td ><input type="button" id="boton_limpiar" class="onmouseOutLimpiar"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10"></td>
 			</tr>
 		</table>
         
@@ -130,6 +134,7 @@
                             <div class=" fixed column">
                                 <ul class="pestanas">
                                     <li><a href="#tabx-1"><strong>Visita</strong></a></li>
+                                    <li><a href="#tabx-2"><strong>Llamada</strong></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -400,7 +405,7 @@
                                                 <tr>
                                                     <td valign="top"> 
 														<fieldset style="border: solid 1px #313E74;" class="gral">
-															<legend>&nbsp;Proxima&nbsp;Visita&nbsp;</legend> 
+															<legend>&nbsp;Pr&oacute;xima&nbsp;visita&nbsp;</legend>
 															<ol valign="top" style="margin:0px; padding:0px;">
 																<table border="0" style="margin:0px; padding:0px;">
 																	<tr>
@@ -419,7 +424,7 @@
 																		<td width="20"></td>
 																		<td width="25"></td>
 																		<td width="25"></td>
-																		<td width="350">Comentarios para la proxima visita</td>
+																		<td width="350">Comentarios para la pr&oacute;xima visita</td>
 																		<td width="25"></td>
 																	</tr>
 																	<tr>
@@ -477,6 +482,89 @@
                                                 </tr>
 											</table>
                                         
+                                    </div>
+                                    
+                                    <!--Pestaña llamada-->
+                                    <div id="tabx-2" class="contenidoPes" >
+										<table border="0" style="margin:0; padding:0;">
+											<tr>
+												<td valign="top"> 
+													<fieldset style="border: solid 1px #313E74;" class="gral">
+														<legend>&nbsp;Pr&oacute;xima&nbsp;llamada&nbsp;</legend>
+														<ol valign="top" style="margin:0px; padding:0px;">
+															<table border="0" style="margin:0px; padding:0px;">
+																<tr>
+																	<td width="10"></td>
+																	<td width="50">Fecha</td>
+																	<td width="100" colspan="4"><input type="text" name="fecha_proxima_llamada" style="width:100px;" readOnly="true"></td>
+																	<!--
+																	<td width="5"></td>
+																	<td width="20"></td>
+																	<td width="55"></td>
+																	-->
+																	<td width="30"></td>
+																	<td width="60"></td>
+																	<td width="20"></td>
+																	<td width="5"></td>
+																	<td width="20"></td>
+																	<td width="25"></td>
+																	<td width="25"></td>
+																	<td width="350">Comentarios para la pr&oacute;xima llamada</td>
+																	<td width="25"></td>
+																</tr>
+																<tr>
+																	<td width="10"></td>
+																	<td colspan="10" height="10"></td>
+																	<td width="25"></td>
+																	<td width="25"></td>
+																	<td width="350" rowspan="3">
+																		<textarea name="comentarios_proxima_llamada" cols="60" rows="1" style="width:350px; height:35px; resize:none;"></textarea>
+																	</td>
+																	<td width="25"></td>
+																</tr>
+																<tr>
+																	<td width="10"></td>
+																	<td width="50">Hora</td>
+																	<td width="45" colspan="3" ><input type="text" name="hora_proxima_llamada" style="width:45px;"></td>
+																	<!--
+																	<td width="5" align="center">:</td>
+																	<td width="20"><input type="text" name="min_proxima_visita" style="width:20px;"></td>
+																	-->
+																	<td width="55">(HH:MM)</td>
+																	<td width="30"></td>
+																	<td width="60"></td>
+																	<td width="20"></td>
+																	<td width="5"></td>
+																	<td width="20"></td>
+																	<td width="50"></td>
+																	<td width="25"></td>
+																	<!--<td width="350"></td>-->
+																	<td width="25"></td>
+																</tr>
+																<tr>
+																	<td width="10"></td>
+																	<td colspan="10" height="8"></td>
+																	<td width="25"></td>
+																	<td width="25"></td>
+																	<!--<td width="350"></td>-->
+																	<td width="25"></td>
+																</tr>
+																<tr>
+																	<td width="10"></td>
+																	<td colspan="10" height="5"></td>
+																	<td width="25"></td>
+																	<td width="25"></td>
+																	<td width="350"></td>
+																	<td width="25"></td>
+																</tr>
+															</table>
+														</ol>
+													</fieldset>
+													
+												</td>
+											</tr>
+											
+										</table>
                                     </div>
                                     
                                 </div>
